# clip

./: README.md  pyproject.toml
next_tiktok_agnet/: next.config.mjs  package.json  pnpm-lock.yaml
next_tiktok_agnet/app/: globals.css  page.tsx
next_tiktok_agnet/app/affiliate/: page.tsx
next_tiktok_agnet/app/api/: route.ts
next_tiktok_agnet/app/api/[id]/: route.ts
next_tiktok_agnet/app/sale/: page.tsx
next_tiktok_agnet/components/: AppTable.tsx  AppTabs.tsx  ChooseModeModal.tsx  FeedbackUi.tsx  FileContainer.tsx  LeftDrawerAffiliate.tsx  LeftDrawerSale.tsx
next_tiktok_agnet/components/ui/: breadcrumb.tsx
next_tiktok_agnet/lib/: api.ts  db.ts
next_tiktok_agnet/prisma/: schema.prisma
next_tiktok_agnet/prisma/migrations/20240526120912_add_workeragent_model/: migration.sql
next_tiktok_agnet/prisma/migrations/20240526133230_add_status/: migration.sql
next_tiktok_agnet/prisma/migrations/20240620112044_change_event_message_to_big_text/: migration.sql
next_tiktok_agnet/prisma/migrations/20240622191554_add_relation_agnet_video/: migration.sql
next_tiktok_agnet/prisma/migrations/20240717060025_add_page/: migration.sql
tiktok/: .gitignore  agents.py  get_tk_cookie.py  main.py  movie.py  server.py  tasks.py  test.py  utils.py
tiktok/config/: base_social_media.py  conf.py  files_times.py  log.py  stealth.min.js
tiktok/tiktokUploader/: account.json  main.py  main_chrome.py
tiktok/tools/: __init__.py  image_generator.py  pexel.py  video_maker.py  voice_generator.py
tiktok/youtube_upload/: constant.py  helpers.py  upload.py
(+1 files in other folders)
